--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     />
 
     <!--====================== SWIPER CSS ======================-->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/css/swiper-bundle.min.css" />
 
     <!--====================== CSS ======================-->
     <link rel="stylesheet" href="./assets/css/style.css" />
@@ -27,7 +27,46 @@
   </head>
   <body>
     <!--========================= HEADER =========================-->
-    <header class="header" id="header"></header>
+    <header class="header" id="header">
+      <nav class="nav container">
+        <a href="" class="nav__logo"> Shop. </a>
+
+        <div class="nav__menu" id="nav-menu">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#home" class="nav__link">
+                <i class="ri-home-line"></i>
+                <span>Home</span>
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a href="#new" class="nav__link">
+                <i class="ri-price-tag-3-line"></i>
+                <span>New</span>
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a href="#collection" class="nav__link">
+                <i class="ri-compass-line"></i>
+                <span>Collection</span>
+              </a>
+            </li>
+
+            <li class="nav__item">
+              <a href="#prodects" class="nav__link">
+                <i class="ri-t-shirt-line"></i>
+                <span>Prodects</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <!-- Theme Change Button-->
+        <i class="ri-moon-line"></i>
+      </nav>
+    </header>
 
     <!--========================= Main =========================-->
     <main class="main">
@@ -46,7 +85,6 @@
       <!--==================== BRANDS ====================-->
       <section class="brand section"></section>
     </main>
-    >
 
     <!--==================== FOOTER ====================-->
     <footer class="footer section"></footer>
@@ -54,12 +92,12 @@
     <!--========== SCROLL UP ==========-->
 
     <!--=============== SCROLLREVEAL ===============-->
-    <script src=""></script>
+    <script src="./assets/js/scrollreveal.js"></script>
 
     <!--=============== SWIPER JS ===============-->
-    <script src=""></script>
+    <script src="./assets/js/swiper-bundle.min.js"></script>
 
     <!--=============== MAIN JS ===============-->
-    <script src=""></script>
+    <script src="./assets/js/main.js"></script>
   </body>
 </html>
